// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test if the tree is prepared  1`] = `
Object {
  "next": Array [
    Object {
      "next": Array [
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "ADD",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "ARCHIVE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "COPY",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "DELETE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "GENERATE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "LIST",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "MOVE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "PRINT",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "RESTORE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "RETRIEVE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "SIGNIN",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "TRANSFER",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "UPDATE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "VALIDATE",
        },
      ],
      "requireNext": true,
      "type": "keyword",
      "value": "ACTION",
    },
    Object {
      "next": Array [],
      "requireNext": true,
      "type": "keyword",
      "value": "BUILD",
    },
    Object {
      "next": Array [
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "file-dd-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "FILE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "dd-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "DDNAME",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "data-set-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "DSNAME",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "environment-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "ENVIRONMENT",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "system-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "SYSTEM",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "subsystem-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "SUBSYSTEM",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "type-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "TYPE",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "stage-id",
                    },
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "value",
                          "value": "stage-no",
                        },
                      ],
                      "requireNext": true,
                      "type": "keyword",
                      "value": "NUMBER",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "STAGE",
                },
              ],
              "requireNext": true,
              "type": "value",
              "value": "site-id",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "SITE",
        },
      ],
      "requireNext": true,
      "type": "keyword",
      "value": "FROM",
    },
    Object {
      "next": Array [],
      "type": "keyword",
      "value": "OPTIONS",
    },
    Object {
      "next": Array [],
      "requireNext": true,
      "type": "keyword",
      "value": "STOPRC",
    },
    Object {
      "next": Array [
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "SYSOUT",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "C1PRINT",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "keyword",
          "value": "C1PRTVB",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "file-dd-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "FILE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "dd-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "DDNAME",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "memeber-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "MEMBER",
                },
              ],
              "type": "value",
              "value": "data-set-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "DSNAME",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "environment-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "ENVIRONMENT",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "system-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "SYSTEM",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "subsystem-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "SUBSYSTEM",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "type-name",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "TYPE",
        },
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [],
                  "type": "eos",
                  "value": ".",
                },
              ],
              "type": "value",
              "value": "stage-id",
            },
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                  ],
                  "type": "value",
                  "value": "stage-no",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "NUMBER",
            },
          ],
          "requireNext": true,
          "type": "keyword",
          "value": "STAGE",
        },
      ],
      "requireNext": true,
      "type": "keyword",
      "value": "TO",
    },
    Object {
      "next": Array [],
      "requireNext": true,
      "type": "keyword",
      "value": "WHERE",
    },
  ],
  "requireNext": true,
  "type": "keyword",
  "value": "SET",
}
`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 1`] = `12`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 2`] = `19`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 3`] = `12`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 4`] = `19`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 5`] = `5`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 6`] = `11`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 7`] = `29`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 8`] = `30`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 9`] = `29`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 10`] = `30`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 11`] = `22`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 12`] = `25`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 13`] = `45`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 14`] = `46`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 15`] = `58`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 16`] = `61`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 17`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Require a valid value to be specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 19,
    "starti": 12,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "relatedInformation": Array [
        Object {
          "location": Object {
            "range": Object {
              "end": Object {
                "character": 2,
                "line": 1,
              },
              "start": Object {
                "character": 2,
                "line": 1,
              },
            },
            "uri": "mocked/uri",
          },
          "message": "Possible valid values: ADD, ARCHIVE, COPY, DELETE, GENERATE, LIST, MOVE, PRINT, RESTORE, RETRIEVE, SIGNIN, TRANSFER, UPDATE, VALIDATE",
        },
      ],
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 19,
    "starti": 12,
  },
]
`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 18`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Require a valid value to be specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 30,
    "starti": 29,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "relatedInformation": Array [
        Object {
          "location": Object {
            "range": Object {
              "end": Object {
                "character": 2,
                "line": 1,
              },
              "start": Object {
                "character": 2,
                "line": 1,
              },
            },
            "uri": "mocked/uri",
          },
          "message": "Possible valid values: ACTION, BUILD, FROM, OPTIONS, STOPRC, TO, WHERE",
        },
      ],
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 30,
    "starti": 29,
  },
]
`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 19`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid scl. Expecting a space before end of statement operator \\".\\".",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 46,
    "starti": 45,
  },
]
`;

exports[`test3: Test 4 simple INvalid SET ACTION Should have error 20`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid scl. No end of statement operator \\".\\" specified.",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 61,
    "starti": 58,
  },
]
`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 1`] = `12`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 2`] = `15`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 3`] = `22`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 4`] = `28`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 5`] = `29`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 6`] = `36`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 7`] = `29`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 8`] = `36`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 9`] = `29`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 10`] = `36`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 11`] = `22`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 12`] = `28`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 13`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 15,
    "starti": 12,
  },
]
`;

exports[`test4: Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 14`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 28,
    "starti": 22,
  },
  Object {
    "diagnostic": Object {
      "message": "Require a valid value to be specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 36,
    "starti": 29,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid scl. No end of statement operator \\".\\" specified.",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 36,
    "starti": 29,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "relatedInformation": Array [
        Object {
          "location": Object {
            "range": Object {
              "end": Object {
                "character": 2,
                "line": 1,
              },
              "start": Object {
                "character": 2,
                "line": 1,
              },
            },
            "uri": "mocked/uri",
          },
          "message": "Possible valid values: ADD, ARCHIVE, COPY, DELETE, GENERATE, LIST, MOVE, PRINT, RESTORE, RETRIEVE, SIGNIN, TRANSFER, UPDATE, VALIDATE",
        },
      ],
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 36,
    "starti": 29,
  },
]
`;
